	drop1() work. Added function anova.ccanull to handle these cases.

	* anova.cca(..., by = "margin") was handling wrongly 'x' in ~
	Condition(x) + x + z, or model formulae where same variables were
	used both as Conditions and (aliased) constraints. 

	* anova.cca(..., by = "margin") or function anova.ccabymargin
	gained a 'scope' argument which is used in drop.scope(). 
	
Version 1.14-11 (closed September 10, 2008)

	* anova.cca/permutest.cca: default permutation model changed from
	"direct" to "reduced" after Pierre Legendre's simulation test
	demonstrated slightly better Type I error for "reduced" models in
	by = "axis" and other partial models. This is also consistent with
	CANOCO (but permutation of CCA residuals differs from CANOCO). For
	compatibility with old versions of vegan, you must set model =
	"direct" explicitly.

	* ordiplot: did not use partial match for "sites" and "species".
	
Version 1.14-10 (closed September 5, 2008)

	* treedive: tries to match 'comm' and 'tree' names if forced (by
	an arg), or when sizes do not match. Output vector has names. Docs
	discuss estimating signifcance using oecosimu().

	* oecosimu: accepts now a vector of statistics and plain
	statistics instead of the list item statistics, and the user can
	define the name of the statistic in the function call. This means
	that things like functional diversity (treedive) for sites can be
	analysed with approprite simulation model.

	* nestedtemp & oecosimu documentations split. 
	
	* ordiParseFormula: formula of the partial terms has the same
	environment as the general formula. Cures some tricky issues when
	the partial term of cca/rda/capscale model is updated within a
	function. (The environment() drives me crazy, says J.O.)

	* ordiParseFormula gains new argument 'envdepth' to define the
	depth where the community data (dependent data) is evaluated. Most
	functions evaluate community data in the parent environment of the